--- a/app/templates/experiment.html
+++ b/app/templates/experiment.html
@@ -10,6 +10,7 @@
   <!-- Load jsPsych plug-ins -->
   <script src="../static/lib/jspsych-7.2.1/plugins/plugin-html-slider-response.js"></script>
   <script src="../static/lib/jspsych-7.2.1/plugins/plugin-html-keyboard-response.js"></script>
+  <script src="../static/lib/jspsych-7.2.1/plugins/plugin-survey-multi-choice.js"></script>
   <script src="../static/lib/jspsych-7.2.1/plugins/plugin-video-keyboard-response.js"></script>
   <script src="../static/lib/jspsych-7.2.1/plugins/plugin-fullscreen.js"></script>
   <script src="../static/lib/jspsych-7.2.1/plugins/plugin-survey-text.js"></script>
@@ -17,7 +18,6 @@
   <!-- Load custom plug-ins -->
   <script src="../static/js/jspsych-comprehension-check.js"></script>
   <script src="../static/js/jspsych-affect-grid.js"></script>
-  <script src="../static/js/jspsych-affect-slider.js"></script>
 
   <!-- Load CSS styles -->
   <link href="../static/css/tacit-css.min.css" rel="stylesheet" type="text/css"></link>
@@ -29,21 +29,6 @@
 </head>
 <body></body>
 <script>
-
-//   // randomise subject to a mood, and then to 2 vids from that mood
-// var audio;
-// let emotionList = ['Sad', 'Fear', 'Calm', 'Happy'];
-// let selected_emotion = emotionList[Math.floor(Math.random() * 4)]; // randomise subject to a mood
-
-// // function to randomly sample without replacement
-// function sample(arr, size) {
-//   return arr
-//       .map((value) => ({ value, sortValue: Math.random() }))
-//       .sort((a, b) => a.sortValue - b.sortValue)
-//       .slice(0, size)
-//       .map((item) => item.value);
-// }
-
   // Display alert message on back/refresh.
   // https://developer.mozilla.org/en-US/docs/Web/API/WindowEventHandlers/onbeforeunload
   function verify_unload(e){
@@ -54,12 +39,10 @@
   };
   window.addEventListener("beforeunload", verify_unload);
 
-  
   // Initialize jsPsych.
   var jsPsych = initJsPsych({
     timeline: timeline,
     on_finish: function() {
-
       // Remove requirement to verify redirect
       window.removeEventListener("beforeunload", verify_unload);
 
@@ -67,35 +50,27 @@
       var interaction_data = jsPsych.data.getInteractionData();
       jsPsych.data.get().addToLast({interactions: interaction_data.json()});
 
-      // Display jsPsych data in viewport.
-      jsPsych.data.displayData();
-       // Define global variables.
+      // Define global variables.
       var low_quality = false;
 
-      // if (low_quality) {
+      // Determine if data is of low quality (implement your own logic)
+      // low_quality = ...;
 
-    //     // Save rejected dataset to disk.
-    //     redirect_reject("{{workerId}}", "{{assignmentId}}", "{{hitId}}", "{{code_reject}}");
-
-    //   } else {
-
-    //     // Save complete dataset to disk.
-    //     redirect_success("{{workerId}}", "{{assignmentId}}", "{{hitId}}", "{{code_success}}");
-
+      if (low_quality) {
+        // Save rejected dataset to disk.
+        redirect_reject("{{workerId}}", "{{assignmentId}}", "{{hitId}}", "{{code_reject}}");
+      } else {
+        // Save complete dataset to disk.
+        redirect_success("{{workerId}}", "{{assignmentId}}", "{{hitId}}", "{{code_success}}");
+      }
     }
-
-    });
-
+  });
 
   // Execute timeline.
   jsPsych.run(timeline);
 
-</script>
-<script>
-
   // Pass message from jsPsych to NivTurk
   function pass_message(msg) {
-
     $.ajax({
       url: "/experiment",
       method: 'POST',
@@ -106,12 +81,10 @@
     }).fail(function(error) {
       console.log(error);
     });
-
   }
 
   // Save an incomplete dataset.
   function incomplete_save() {
-
     $.ajax({
       url: "/incomplete_save",
       method: 'POST',
@@ -122,12 +95,10 @@
     }).fail(function(error) {
       // do nothing
     });
-
   }
 
   // Successful completion of experiment: redirect with completion code.
   function redirect_success(workerId, assignmentId, hitId, code_success) {
-
     // Concatenate metadata into complete URL (returned on success).
     var url = "https://app.prolific.co/submissions/complete?cc=" + code_success;
 
@@ -141,12 +112,10 @@
     }).fail(function(error) {
       window.location.replace(url);
     });
-
   }
 
   // Unsuccessful completion of experiment: redirect with decoy code.
   function redirect_reject(workerId, assignmentId, hitId, code_reject) {
-
     // Concatenate metadata into complete URL (returned on reject).
     var url = "https://app.prolific.co/submissions/complete?cc=" + code_reject;
 
@@ -164,7 +133,6 @@
 
   // Unsuccessful completion of experiment: redirect to error page.
   function redirect_error(error) {
-
     // error is the error number to redirect to.
     var url = "/error/" + error;
 
@@ -178,8 +146,6 @@
     }).fail(function(error) {
       window.location.replace(url);
     });
-
   }
-
 </script>
 </html>
