--- a/app/templates/experiment.html
+++ b/app/templates/experiment.html
@@ -16,6 +16,7 @@
   <script src="../static/lib/jspsych-7.2.1/plugins/plugin-survey-text.js"></script>
 
   <!-- Load custom plug-ins -->
+  <script src="../static/js/jspsych-survey-demo.js"></script>
   <script src="../static/js/jspsych-comprehension-check.js"></script>
   <script src="../static/js/jspsych-affect-grid.js"></script>
 
